[tool.poetry]
name = "elementary-ext"
version = "0.0.1"
description = "`elementary-ext` is a Meltano utility extension."
authors = ["Stephane Burwash (Potloc)"]
license = "Apache 2.0"

packages = [
    { include = "elementary_ext" },
    { include = "files_elementary_ext" },
]

# If you need to static assets with your extension, you can add them here.
# Under a directory path of "files_elementary_ext/"
include = [
    {path = "files_elementary_ext"},
]

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
structlog = "^21.2.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="v0.1.0"}
importlib-resources = "^5.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
elementary_extension = 'elementary_ext.main:app'
elementary_invoker = 'elementary_ext.pass_through:pass_through_cli'
